[WFCORE-5418] Minimal but complete set of modular JDK params needed to build WildFly COre and run its whole test suite